--- a/setup.html
+++ b/setup.html
@@ -3,27 +3,72 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهيئة المصاريف - المعهد</title>
+<title>تهيئة مشروع OMA0 - المالية والمصاريف</title>
 <style>
-body { font-family:'Cairo',sans-serif; padding:30px; background:#f5f9ff; color:#102027; }
-button { padding:10px 16px; border:none; border-radius:8px; background:#004aad; color:#fff; cursor:pointer; font-weight:bold; }
+body { font-family:'Cairo',sans-serif; padding:20px; background:#f5f9ff; color:#102027; }
+h2,h3 { margin-top:0; }
+input,textarea,select,button { font-family:'Cairo',sans-serif; font-size:14px; margin:4px 0; padding:6px 10px; border-radius:6px; border:1px solid #ccc; }
+button { background:#004aad; color:#fff; cursor:pointer; border:none; }
 button:hover { background:#003a8c; }
-pre { background:#eef4ff; padding:10px; border-radius:8px; overflow-x:auto; white-space:pre-wrap; }
+fieldset { border:1px solid #ddd; padding:10px; margin-bottom:15px; border-radius:8px; }
+legend { font-weight:bold; }
+#log { background:#eef4ff; padding:10px; border-radius:8px; overflow-x:auto; white-space:pre-wrap; height:200px; }
+.addBtn { background:#ff9800; margin-left:4px; }
 </style>
 </head>
 <body>
 
-<h2>🚀 تهيئة Collection المصاريف - المعهد</h2>
-<p>اضغط على الزر لإنشاء جميع الحقول الأساسية لكل مصروف جديد تلقائيًا.</p>
+<h2>🚀 تهيئة مشروع OMA0 - المالية والمصاريف</h2>
+<p>املأ البيانات الأساسية واضغط "ابدأ التهيئة" لإنشاء المستندات تلقائيًا.</p>
+
+<fieldset>
+<legend>معلومات المعهد</legend>
+<label>اسم المعهد: <input type="text" id="instituteName" value="معهد OMA"></label><br>
+<label>البريد الإلكتروني: <input type="email" id="instituteEmail"></label><br>
+<label>الهاتف: <input type="text" id="institutePhone"></label><br>
+<label>العنوان: <input type="text" id="instituteAddress"></label><br>
+<label>رابط الشعار: <input type="text" id="instituteLogo"></label>
+</fieldset>
+
+<fieldset>
+<legend>المدرسون</legend>
+<div id="teachersList">
+  <div>
+    <input type="text" placeholder="اسم المدرس" class="teacherInput">
+    <button type="button" class="addBtn" onclick="addTeacherInput(this)">+</button>
+  </div>
+</div>
+</fieldset>
+
+<fieldset>
+<legend>الطلاب</legend>
+<div id="studentsList">
+  <div>
+    <input type="text" placeholder="اسم الطالب" class="studentInput">
+    <input type="text" placeholder="المواد مفصولة بفواصل" class="subjectsInput">
+    <button type="button" class="addBtn" onclick="addStudentInput(this)">+</button>
+  </div>
+</div>
+</fieldset>
+
+<fieldset>
+<legend>المصاريف الأولية</legend>
+<div id="expensesList">
+  <div>
+    <input type="text" placeholder="اسم المصروف" class="expenseInput">
+    <input type="number" placeholder="المبلغ" class="amountInput">
+    <button type="button" class="addBtn" onclick="addExpenseInput(this)">+</button>
+  </div>
+</div>
+</fieldset>
+
 <button id="initBtn">ابدأ التهيئة</button>
 <pre id="log"></pre>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-analytics.js";
+import { getFirestore, doc, setDoc, getDoc, collection } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -35,52 +80,132 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
 const db = getFirestore(app);
-
 const log = document.getElementById("log");
 const initBtn = document.getElementById("initBtn");
 
 function addLog(msg){ log.textContent += msg + "\n"; }
 
-// ✅ إنشاء هيكل مصروف جديد
-async function createExpense(expenseId){
-  const expenseRef = doc(db, "expenses", expenseId);
+// ---------- إضافة مدخلات ديناميكية ----------
+window.addTeacherInput = function(btn){
+  const div = document.createElement("div");
+  div.innerHTML = `<input type="text" placeholder="اسم المدرس" class="teacherInput"> <button type="button" class="addBtn" onclick="addTeacherInput(this)">+</button>`;
+  btn.parentNode.after(div);
+};
+window.addStudentInput = function(btn){
+  const div = document.createElement("div");
+  div.innerHTML = `<input type="text" placeholder="اسم الطالب" class="studentInput"> <input type="text" placeholder="المواد مفصولة بفواصل" class="subjectsInput"> <button type="button" class="addBtn" onclick="addStudentInput(this)">+</button>`;
+  btn.parentNode.after(div);
+};
+window.addExpenseInput = function(btn){
+  const div = document.createElement("div");
+  div.innerHTML = `<input type="text" placeholder="اسم المصروف" class="expenseInput"> <input type="number" placeholder="المبلغ" class="amountInput"> <button type="button" class="addBtn" onclick="addExpenseInput(this)">+</button>`;
+  btn.parentNode.after(div);
+};
 
-  if((await getDoc(expenseRef)).exists()){
-    addLog(`⚠️ المصروف ${expenseId} موجود مسبقًا`);
-    return;
+// ---------- إنشاء المستندات ----------
+async function createSettings(info){
+  const colorsRef = doc(db,"settings","colors");
+  const infoRef = doc(db,"settings","info");
+  const instituteRef = doc(db,"settings","institute");
+  const percentagesRef = doc(db,"settings","percentages");
+
+  const defaults = [
+    [colorsRef, { primary:"#004aad", accent:"#ffcc33", bg:"#f5f9ff", card:"#fff" }],
+    [infoRef, { name:info.name, logo:info.logo, address:info.address, email:info.email, phone:info.phone }],
+    [instituteRef, { name:info.name, logo:info.logo, address:info.address, email:info.email, phone:info.phone }],
+    [percentagesRef, { teacher:60, institute:40 }]
+  ];
+
+  for(const [ref,data] of defaults){
+    if(!(await getDoc(ref)).exists()){
+      await setDoc(ref,data);
+      addLog(`✅ تم إنشاء ${ref.path}`);
+    } else {
+      addLog(`⚠️ ${ref.path} موجود مسبقًا`);
+    }
   }
-
-  await setDoc(expenseRef, {
-    description: "",      // وصف المصروف
-    amount: 0,            // المبلغ
-    date: new Date().toISOString().split('T')[0],  // تاريخ اليوم تلقائيًا
-    notes: "",            // ملاحظات إضافية
-    createdAt: new Date().toISOString()
-  });
-
-  addLog(`✅ تم إنشاء هيكل المصروف ${expenseId}`);
 }
 
+async function createTeachers(teachers){
+  const col = collection(db,"teachers");
+  for(const t of teachers){
+    if(t.trim() === "") continue;
+    const docRef = doc(col);
+    await setDoc(docRef,{name:t});
+    addLog(`✅ تم إنشاء مدرس: ${t}`);
+  }
+}
+
+async function createStudents(students){
+  const col = collection(db,"students");
+  for(const s of students){
+    if(s.name.trim() === "") continue;
+    const docRef = doc(col);
+    await setDoc(docRef,{
+      name: s.name,
+      subjects: s.subjects.map(sub => ({ name: sub.trim() }))
+    });
+    addLog(`✅ تم إنشاء طالب: ${s.name}`);
+  }
+}
+
+async function createExpenses(expenses){
+  const col = collection(db,"expenses");
+  const today = new Date().toISOString().split('T')[0];
+  for(const e of expenses){
+    if(e.name.trim() === "") continue;
+    const docRef = doc(col);
+    await setDoc(docRef,{
+      description: e.name,
+      amount: Number(e.amount || 0),
+      date: today,
+      notes:"",
+      createdAt: new Date().toISOString()
+    });
+    addLog(`✅ تم إنشاء مصروف: ${e.name}`);
+  }
+}
+
+// ---------- حدث زر التهيئة ----------
 initBtn.addEventListener("click", async()=>{
   initBtn.disabled = true;
   initBtn.textContent = "⏳ جاري التهيئة...";
 
-  try {
-    // أمثلة مصاريف تجريبية
-    await createExpense("expense_001");
-    await createExpense("expense_002");
-    await createExpense("expense_003");
+  try{
+    // جمع البيانات من المدخلات
+    const info = {
+      name: document.getElementById("instituteName").value,
+      email: document.getElementById("instituteEmail").value,
+      phone: document.getElementById("institutePhone").value,
+      address: document.getElementById("instituteAddress").value,
+      logo: document.getElementById("instituteLogo").value
+    };
 
-    addLog("\n🎉 تم تهيئة جميع الحقول الأساسية للمصاريف بنجاح!");
+    const teachers = Array.from(document.querySelectorAll(".teacherInput")).map(i=>i.value);
+    const students = Array.from(document.querySelectorAll(".studentInput")).map((i,j)=>({
+      name:i.value,
+      subjects:(document.querySelectorAll(".subjectsInput")[j].value.split(","))
+    }));
+    const expenses = Array.from(document.querySelectorAll(".expenseInput")).map((i,j)=>({
+      name:i.value,
+      amount: document.querySelectorAll(".amountInput")[j].value || 0
+    }));
+
+    await createSettings(info);
+    await createTeachers(teachers);
+    await createStudents(students);
+    await createExpenses(expenses);
+
+    addLog("\n🎉 تم تهيئة جميع المستندات الأساسية بنجاح!");
     initBtn.textContent = "تم الانتهاء";
-  } catch(e){
+  }catch(e){
     addLog("❌ خطأ أثناء التهيئة: "+e.message);
     initBtn.disabled = false;
     initBtn.textContent = "أعد المحاولة";
   }
 });
 </script>
+
 </body>
 </html>
